<resources>
    <string name="app_name">Dharma</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="BIENVENIDO">BIENVENIDO</string>
    <string name="CALIFIQUENOS">CALIFIQUENOS</string>
    <string name="AYUDA">AYUDA</string>
    <string name="PAGAR">PAGAR CUENTA</string>
    <string name="PAGAR_EFECTIVO">PAGO EN EFECTIVO</string>
    <string name="PAGAR_CREDITO">TARJETA DE CRÉDITO</string>
    <string name="HACER_PEDIDO">HACER PEDIDO</string>
    <string name="boton_ayuda">boton_de_ayuda</string>
    <string name="hacer_pedido">imagen_de_hacer_pedido</string>
    <string name="Recomendados_listos">Recomendados y\nlistos</string>
    <string name="Combinarlo">Combinarlo como\nquiero</string>
    <string name="RETOS_ADULTOS">RETOS ADULTOS</string>
    <string name="RETOS_NIÑOS">RETOS NIÑOS</string>
    <string name="imagen_retos_adultos">Imagen de pantalla retos adultos</string>
    <string name="imagen_cultura_hindu">Botón retos cultura hindú</string>
    <string name="imagen_retos">Botón de retos adultos</string>
    <string name="boton_home">Botón para ir la menú principal</string>
    <string name="cultura_hindu">Cultura Hindú</string>
    <string name="Reto">Reto</string>
    <string name="efectivo">Efectivo</string>
    <string name="credito">Tarjeta Crédito</string>
    <string name="menu_principal">¿QUÉ LE GUSTARÍA \nHACER?</string>
    <string name="mesa_no"> Mesa No. </string>
    <string name="esta_mesa">Esta en la </string>
    <string name="boton_numero_mesa">Cambiar número\nde mesa</string>
    <string name="pedir_plato">pedir plato</string>
    <string name="entretenimiento">entretenimiento</string>
    <string name="pagar">boton_pagar</string>
    <string name="pqrs">califiquenos</string>
    <string name="ENTRETENIMIENTO">ENTRETENIMIENTO</string>
    <string name="inicio">Imagen de inicio</string>
    <string name="flecha">flecha</string>
    <string name="transicion">transición</string>
    <string name="sopa_letras">Sopa de letras</string>
    <string name="Adivinanzas">Adivinanzas</string>
    <string name="imagen_retos_niños">retos niños</string>
    <string name="mesa">¿EN QUÉ MESA SE ENCUENTRA?</string>
    <string name="Siguiente">Siguiente</string>
    <string name="boton_camara">botón cámara</string>
    <string name="imagen_mesa">Imagen Mesa</string>
    <string name="digite_numero_mesa">Escoja el número \nde la mesa</string>
    <string name="escanee_numero_mesa">Escanee el número \nde la mesa</string>
    <string name="mejorar_text">Qué podriamos mejorar</string>
    <string name="comentario">--- Dejar un comentario ---</string>
    <string name="agradecimiento">¡MUCHAS GRACIAS!</string>
    <string name="calificacion">¿Cuántas estrellas nos daría?</string>
    <string name="enviar_comentario">ENVIAR</string>
    <string name="pagar_cuenta">pagar_cuenta</string>
    <string name="tiempo_espera">tiempo_espera</string>
    <string name="hindu_calificacion">hindu_calificacion</string>
    <string name="estrella">estrella</string>
    <string name="Llamar_a_Zamir">Llamar a Zamir</string>
    <string name="datafono">datafono</string>
    <string name="billetera">Billetera Móvil</string>
    <string name="pago_efectivo">Pago en efectivo</string>
    <string name="Llamando_Zamir">Llamando a Zamir</string>
    <string name="Registrar_tarjeta">Registrar Tarjeta</string>
    <string name="Escanear_tarjeta">Escanear Tarjeta</string>
    <string name="REGISTRO_TARJETA">REGISTRAR TARJETA</string>
    <string name="hacer_pago">HACER PAGO</string>
    <string name="Finalizar_pago_TC">Pago Finalizado</string>
    <string name="pista_numero_tarjeta">Número tarjeta de crédito</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="cvv">CVV</string>


</resources>
