<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0sp"
    android:paddingLeft="0sp"
    android:paddingRight="0sp"
    android:paddingTop="0sp"
    tools:context="com.example.personal.dharma.Pagar"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PAGAR_EFECTIVO"
        android:textAlignment="center"
        android:textSize="@dimen/titles_size_standard"
        android:id="@+id/titulo"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#F79730"
        android:padding="25sp"
        android:elevation="10dp"
        android:elegantTextHeight="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boton_ayuda"
        android:padding="0sp"
        android:scaleType="center"
        android:contentDescription="@string/boton_ayuda"
        android:src="@drawable/boton_ayuda"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_principal"
        android:padding="0sp"
        android:scaleType="center"
        android:src="@drawable/boton_menu_principal"
        android:contentDescription="@string/menu_principal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView13"
        android:src="@drawable/pago_efectivo"
        android:layout_toStartOf="@+id/menu_principal"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/titulo"
        android:layout_above="@+id/textView26"
        android:contentDescription="@string/pagar_cuenta"
        android:layout_marginTop="-18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        android:id="@+id/textView26"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#FBCB73"
        android:padding="33sp"
        android:password="false"
        android:layout_above="@+id/boton_ayuda"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/formulario"
        android:contentDescription="@string/datafono"
        android:src="@drawable/datafono"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40sp"
        android:layout_alignBottom="@+id/textView26"
        android:layout_below="@+id/imageView13"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="5sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/escanear"
        android:contentDescription="@string/imagen_cultura_hindu"
        android:src="@drawable/pagar_efectivo"
        android:layout_marginRight="45sp"
        android:layout_alignEnd="@+id/menu_principal"
        android:layout_marginEnd="33dp"
        android:layout_below="@+id/imageView13"
        android:layout_marginTop="30sp"
        android:layout_alignBottom="@+id/textView26"
        android:layout_marginBottom="5sp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/Llamar_a_Zamir"
        android:id="@+id/boton_llamar"
        android:textSize="18sp"
        android:background="#F79730"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/imageView13"
        android:layout_marginBottom="140sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billetera"
            android:id="@+id/opcion_datafono"
            android:layout_alignTop="@+id/textView26"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30sp"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pago_efectivo"
            android:id="@+id/opcion_efectivo"
            android:layout_below="@+id/imageView13"
            android:layout_alignEnd="@+id/menu_principal"
            android:checked="false"
            android:layout_marginLeft="55sp" />
    </RadioGroup>




</RelativeLayout>
