<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0sp"
    android:paddingLeft="0sp"
    android:paddingRight="0sp"
    android:paddingTop="0sp"
    tools:context="com.example.personal.dharma.HacerPedido"
    android:background="#FCCFA8">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HACER_PEDIDO"
        android:textAlignment="center"
        android:textSize="@dimen/titles_size_standard"
        android:id="@+id/titulo"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#F79730"
        android:padding="25sp"
        android:elevation="10dp"
        android:elegantTextHeight="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/hacer_pedido"
        android:contentDescription="@string/hacer_pedido"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-10sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boton_ayuda"
        android:padding="0sp"
        android:scaleType="center"
        android:contentDescription="@string/boton_ayuda"
        android:src="@drawable/boton_ayuda"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Recomendados_listos"
        android:id="@+id/button"
        android:background="#F79730"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:layout_marginStart="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Combinarlo"
        android:id="@+id/button2"
        android:background="#F79730"
        android:textColor="#FFFFFF"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/imageView4"
        android:textSize="18sp"
        android:layout_marginEnd="10sp" />

</RelativeLayout>
