<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0sp"
    android:paddingLeft="0sp"
    android:paddingRight="0sp"
    android:paddingTop="0sp"
    tools:context="com.example.personal.dharma.Pqrs"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CALIFIQUENOS"
        android:textAlignment="center"
        android:textSize="@dimen/titles_size_standard"
        android:id="@+id/titulo"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#F79730"
        android:padding="25sp"
        android:elevation="10dp"
        android:elegantTextHeight="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        android:id="@+id/textView26"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#FBCB73"
        android:padding="33sp"
        android:password="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="103dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mejorar_text"
        android:id="@+id/escanear_text"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_alignTop="@+id/textView26"
        android:layout_alignEnd="@+id/escanear"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/escanear"
        android:contentDescription="@string/imagen_cultura_hindu"
        android:src="@drawable/app"
        android:layout_alignBottom="@+id/textView26"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="35sp"
        android:onClick="cambioApp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/formulario"
        android:contentDescription="@string/imagen_retos"
        android:src="@drawable/signopesos"
        android:layout_alignBottom="@+id/textView26"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35sp"
        android:onClick="cambioPesos" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/espera"
        android:src="@drawable/espera"
        android:layout_below="@+id/escanear_text"
        android:contentDescription="@string/tiempo_espera"
        android:layout_centerHorizontal="true"
        android:onClick="cambioEspera" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/comentario"
        android:hint="@string/comentario"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="100sp"
        android:textAlignment="center" />
    <Button
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/enviar_comentario"
        android:id="@+id/boton_enviar"
        android:textSize="12sp"
        android:background="#F79730"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/comentario"
        android:layout_alignStart="@+id/escanear"
        android:layout_alignBottom="@+id/comentario"
        android:layout_marginRight="5sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hindu"
        android:src="@drawable/hindu"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView26"
        android:layout_below="@+id/titulo"
        android:contentDescription="@string/hindu_calificacion"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mensaje_estrellas"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_above="@+id/estrella_1"
        android:layout_alignStart="@+id/estrella_1"
        android:layout_marginBottom="27dp"
        android:layout_alignEnd="@+id/estrella_3"
        android:text="@string/calificacion" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/estrella_1"
        android:src="@drawable/estrellavacia"
        android:layout_alignTop="@+id/estrella_2"
        android:layout_alignStart="@+id/comentario"
        android:nestedScrollingEnabled="false"
        android:contentDescription="@string/estrella"
        android:onClick="cambioEstrella1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/estrella_2"
        android:src="@drawable/estrellavacia"
        android:layout_alignTop="@+id/estrella_3"
        android:layout_toEndOf="@+id/formulario"
        android:contentDescription="@string/estrella"
        android:onClick="cambioEstrella2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/estrella_3"
        android:src="@drawable/estrellavacia"
        android:layout_marginTop="92dp"
        android:layout_alignTop="@+id/hindu"
        android:layout_alignEnd="@+id/espera"
        android:contentDescription="@string/estrella"
        android:onClick="cambioEstrella3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/estrella_4"
        android:src="@drawable/estrellavacia"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/estrella_1"
        android:contentDescription="@string/estrella"
        android:onClick="cambioEstrella4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/estrella_5"
        android:src="@drawable/estrellavacia"
        android:layout_alignTop="@+id/estrella_4"
        android:layout_toEndOf="@+id/estrella_2"
        android:contentDescription="@string/estrella"
        android:onClick="cambioEstrella5" />


</RelativeLayout>
